syntax = "proto3";

option go_package = "github.com/yarns-pro/api/pkg/go/v1/service";
option java_multiple_files = true;
option java_package = "pro.yarns.api.v1.service";
option java_outer_classname = "ServiceProto";

package pro.yarns.api.v1.service;

import "v1/entity/user.proto";
import "v1/entity/message.proto";

service YarnsApiV1 {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
}

message RegisterRequest {
  bytes publicKey = 1;
}

message RegisterResponse {
  entity.User user = 1;
}

message GetUserByIdRequest {
  int64 userId = 1;
}

message GetUserByIdResponse {
  entity.User user = 1;
}